Improve mini-swe-agent support